HUDF-489: Custom Status in a conversation no longer overflows into dock if too long @jcheungfc

--- a/FJSHUD/app/styles/widget.less
+++ b/FJSHUD/app/styles/widget.less
@@ -137,6 +137,8 @@
   span.ChatStatus{
      font-weight: normal !important;
      font-size: 0.875em;
+     text-overflow: ellipsis;
+     white-space: nowrap;
   }
   .XIcon-ChatStatus-offline,
   .XIcon-ChatStatus-away,
